<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/memoji"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/text_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_about_me"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/about_me"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_me"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_margin="12dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textAllCaps="false"
            android:text="@string/btn_facebook"
            android:background="@color/colorFacebook"
            android:textColor="@color/colorWhite"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textAllCaps="false"
            android:text="@string/btn_twitter"
            android:background="@color/colorTwitter"
            android:textColor="@color/colorWhite"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textAllCaps="false"
            android:text="@string/btn_instagram"
            android:background="@color/colorInsatgram"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>
</LinearLayout>