<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/txt_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="36sp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_num"
        android:textAlignment="viewEnd"
        android:padding="8dp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="48sp"/>

    <RelativeLayout
        android:id="@+id/layout_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_about">

        <LinearLayout
            android:id="@+id/view_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_2">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_1"
                android:onClick="clickOne"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_2"
                android:onClick="clickTwo"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_3"
                android:onClick="clickThree"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorYellow"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:text="@string/text_min"
                android:onClick="clickMinus"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_3">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_4"
                android:onClick="clickFour"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_5"
                android:onClick="clickFive"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_6"
                android:onClick="clickSix"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorYellow"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:text="@string/text_mul"
                android:onClick="clickMultiply"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/view_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_7"
                android:onClick="clickSeven"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_8"
                android:onClick="clickEight"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_9"
                android:onClick="clickNine"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorYellow"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:text="@string/text_div"
                android:onClick="clickDivided"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/view_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_1">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_0"
                android:onClick="clickZero"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_equal"
                android:onClick="clickEqual"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorWhite"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:text="@string/text_clear"
                android:onClick="clickCLear"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@color/colorYellow"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:text="@string/text_plus"
                android:onClick="clickPlus"/>
        </LinearLayout>


    </RelativeLayout>
    <TextView
        android:id="@+id/txt_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_about"
        android:background="@color/colorYellow"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="24sp"
        android:padding="8dp"
        android:onClick="clickAbout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>